# SMS-Mirror-Mode

./: CMakeLists.txt  README.md
include/: mirror.hxx  settings.hxx
src/: main.cpp  mirror.cpp
